se implementan cambios en la gestión de cuentas por pagar, incluyendo la creación de nuevos DTOs, la implementación de reglas de validación y la modificación de mappers para el manejo de estados